fix a number of cucumber features and minor bugs discovered in turn
 - fix "watchable" feature by expecting the correct no. of emails
 - fix groups feature
 - fix create example feature
 - fix create project feature
 - fix file upload cucumber feature
 - fix updating user profile and related features
 - fix password reset feature

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -808,7 +808,7 @@ en:
       max_upload_size: "Max upload size is %{mb} Mb"
     form:
       presence: "You can't upload a blank file"
-      max_size: "File size can't exceed %{mb}"
+      max_size: "File size can't exceed %{mb} MB"
       select_file: Select file
       description: Title <i>(optional)</i>
       upload: Upload file
